# openrelik-worker-opensearch

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bootstrap.sh  openrelik.yaml  pyproject.toml
.github/workflows/: docker-image.yaml  python-test.yaml
docs/: searching-opensearch.md  searching-timesketch.md
src/: __init__.py  app.py  tasks.py
src/mappings/: __init__.py  kstrike_ual.json
tests/: test_tasks.py
